src/objects/zqu__ZProduct__c.object
<CustomObject>
    <fields>
        <fullName>Default_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Defines plan assigned to a subscription when it is created without any specified.</description>
        <inlineHelpText>Defines plan assigned to a subscription when it is created without any specified.</inlineHelpText>
        <label>Default Plan</label>
        <referenceTo>Plan__c</referenceTo>
        <relationshipLabel>ZProducts</relationshipLabel>
        <relationshipName>ZProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeadDays__c</fullName>
        <description>Number of days from the Closest Saturday when the subscription starts</description>
        <label>Lead Days</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxCoverPriceAnnual__c</fullName>
        <description>Max annual cover price for product. Updated from Zuora.</description>
        <inlineHelpText>Max annual cover price for product. Updated from Zuora.</inlineHelpText>
        <label>Max Cover Price Annual</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxCoverPriceDay__c</fullName>
        <description>Max daypass cover price for product. Updated from Zuora.</description>
        <inlineHelpText>Max daypass cover price for product. Updated from Zuora.</inlineHelpText>
        <label>Max Cover Price Day</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxCoverPriceMonth__c</fullName>
        <description>Max monthly cover price for product. Updated from Zuora.</description>
        <inlineHelpText>Max monthly cover price for product. Updated from Zuora.</inlineHelpText>
        <label>Max Cover Price Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether Product contains print type of feature.</description>
        <inlineHelpText>Determines whether Product contains print type of feature.</inlineHelpText>
        <label>Print Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductCountry__c</fullName>
        <label>ProductCountry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductFriendlyName__c</fullName>
        <label>Product Friendly Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Image_2__c</fullName>
        <label>Product Image 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Image__c</fullName>
        <label>Product Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RefundsAllowed__c</fullName>
        <description>This setting is used to prevent/allow refunds for subscriptions with specific products.</description>
        <inlineHelpText>This setting is used to prevent/allow refunds for subscriptions with specific products.</inlineHelpText>
        <label>Refunds Allowed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Voucher_Delivery_Type__c</fullName>
        <description>It defines how  vouchers for this product can be delivered to the customer.</description>
        <inlineHelpText>It defines how  vouchers for this product can be delivered to the customer.</inlineHelpText>
        <label>Voucher Delivery Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OTC</fullName>
                </value>
                <value>
                    <fullName>HND</fullName>
                </value>
                <value>
                    <fullName>OTC &amp; HND</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <description>Product rank.</description>
        <inlineHelpText>Product rank.</inlineHelpText>
        <label>Rank</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RestrictedOfferLockinPeriod__c</fullName>
        <inlineHelpText>Period of time (in months) for which a Subscriber should be locked if this Product was sold with a Restricted Offer.</inlineHelpText>
        <label>Restricted Offer Lock-in Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <pluralLabel>Products</pluralLabel>    
</CustomObject>